--- a/changelog.txt
+++ b/changelog.txt
@@ -8,3 +8,75 @@ some time in 2016 - nnyellow there
 26/02/2017 - bimg
 28/05/2018 - copy guid
 12/06/2018 - improved copy guid
+???????
+
+# Changelog
+All notable changes to this project will be documented in this file.
+Date system: DD/MM/YYYY
+
+# Version History
+
+07/05/2016 - 0.0.5
+08/05/2016 - 0.1.0
+03/07/2016 - 0.1.5
+08/01/2017 - 0.3.0
+20/01/2017 - 0.3.5
+26/02/2017 - 0.4.0
+28/05/2018 - 0.5.0
+12/06/2018 - 0.5.5
+04/07/2018 - 0.6.0
+09/07/2018 - 0.6.5
+10/07/2018 - 0.7.0
+25/07/2018 - 0.7.5
+28/02/2019 - 0.8.0
+03/04/2019 - 0.8.5
+
+## [Unreleased]
+
+## [0.0.5] - 07/05/2016
+### Added 
++Hyperlinks for lookup results: item, object, creature, tele, spell
+
+## [0.1.0] - 08/05/2016
+### Added
++ Gobject near hyperlinks
+
+### Changed
+• Fixed Colour leaking in hyperlinks
+
+## [Released]
+
+## 0.1.5 - 03/07/2016
+### Added
++Copy URL hyperlink
+
+## [0.3.0] -  08/01/2017
+
+## [0.3.5] - 20/01/2017
+
+## [0.4.0] - 26/02/2017
+
+## [0.5.0] - 28/05/2018
+
+## [0.5.5] - 12/06/2018
+
+## [0.6.0] - 04/07/2018
+
+## [0.6.5] - 09/07/2018
+
+## [0.7.0] - 10/07/2018
+
+## [0.7.5] - 25/07/2018
+
+## [0.8.0] - 28/02/2019
+
+## [0.8.5] - 03/04/2019
+
+
+
+
+
+
+
+
+
