--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,8 @@ Date system: DD/MM/YYYY
 ##	25/07/2018 - 0.7.5
 ##	28/02/2019 - 0.8.0
 ##	03/04/2019 - 0.8.5
+##  20/04/2019 - 0.9.0
+##  10/07/2019 - 0.9.5
 
 ## [Unreleased]
 
@@ -99,7 +101,9 @@ Date system: DD/MM/YYYY
 ### Added
 + Added relevant Hyperlinks to npc near results.
 
-
+## [0.9.5] - 10/07/2019
+### Changes
+* Fixed issue with [Delete] hyperlink when deleting objects listed in .gobject near.
 
 
 
