--- a/changelog.txt
+++ b/changelog.txt
@@ -20,6 +20,7 @@ Date system: DD/MM/YYYY
 ##	03/04/2019 - 0.8.5
 ##  20/04/2019 - 0.9.0
 ##  10/07/2019 - 0.9.5
+##  09/08/2019 - 0.9.6
 
 ## [Unreleased]
 
@@ -105,7 +106,9 @@ Date system: DD/MM/YYYY
 ### Changes
 * Fixed issue with [Delete] hyperlink when deleting objects listed in .gobject near.
 
-
+## [0.9.6] - 09/08/2019
+### Added
++ Spawn and Delete Hyperlinks for phase forge NPCs.
 
 
 
