--- a/changelog.txt
+++ b/changelog.txt
@@ -21,6 +21,7 @@ Date system: DD/MM/YYYY
 ##  20/04/2019 - 0.9.0
 ##  10/07/2019 - 0.9.5
 ##  09/08/2019 - 0.9.6
+##  18/10/2019 - 0.9.7
 
 ## [Unreleased]
 
@@ -110,5 +111,10 @@ Date system: DD/MM/YYYY
 ### Added
 + Spawn and Delete Hyperlinks for phase forge NPCs.
 
+## [0.9.7] - 18/10/2019
+### Changed
+* Updated to recognise recent gobject select message change.
+* All Select, Delete, Go hyperlinks now use an objects GUID to perform their functions, rather than entryID.
+* Temporarily removed Copy Coordinates button from gobject select results.
 
 
