--- a/changelog.txt
+++ b/changelog.txt
@@ -22,6 +22,8 @@ Date system: DD/MM/YYYY
 ##  10/07/2019 - 0.9.5
 ##  09/08/2019 - 0.9.6
 ##  18/10/2019 - 0.9.7
+##  19/10/2019 - 0.9.8
+
 
 ## [Unreleased]
 
@@ -116,5 +118,10 @@ Date system: DD/MM/YYYY
 * Updated to recognise recent gobject select message change.
 * All Select, Delete, Go hyperlinks now use an objects GUID to perform their functions, rather than entryID.
 * Temporarily removed Copy Coordinates button from gobject select results.
+
+## [0.9.8] - 19/10/2019
+### Added
++ Hyperlinks to .lookup emote results
+
 
 
