--- a/changelog.txt
+++ b/changelog.txt
@@ -23,6 +23,7 @@ Date system: DD/MM/YYYY
 ##  09/08/2019 - 0.9.6
 ##  18/10/2019 - 0.9.7
 ##  19/10/2019 - 0.9.8
+##  02/11/2019 - 0.9.9
 
 
 ## [Unreleased]
@@ -123,5 +124,10 @@ Date system: DD/MM/YYYY
 ### Added
 + Hyperlinks to .lookup emote results
 
+## [0.9.9] - 02/11/2019
+### Added
++ Copy Coordinates and Teleport hyperlinks have been added to gobject select again.
 
+### Changed
+* Whenever you enter the world through .teleport or logging in, your client queries .gps to grab your coordinates.
 
